--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <link rel="apple-touch-icon"href="https://icons8.com/icon/elq8R5kggLjc/partly-cloudy-day" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
